Mon Oct 26 12:25:33 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_stdio.inl:
          Fix for msvc10

Mon Oct 26 11:54:33 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Basic_Types.h:
          Small improvement for PPC64

Mon Oct 26 10:41:43 UTC 2009  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * protocols/ace/HTBP/HTBP_Inside_Squid_Filter.cpp:
        * protocols/ace/HTBP/HTBP_Session.h:
        * protocols/ace/HTBP/HTBP_Environment.cpp:
        * protocols/ace/HTBP/HTBP_Channel.h:
        * protocols/ace/HTBP/HTBP_Filter_Factory.h:
        * protocols/ace/HTBP/HTBP_Session.cpp:
        * protocols/ace/HTBP/HTBP_Session.inl:
        * protocols/ace/HTBP/HTBP_ID_Requestor.cpp:
        * protocols/ace/HTBP/HTBP_Channel.inl:
        * protocols/ace/HTBP/HTBP_Channel.cpp:
        * protocols/ace/HTBP/HTBP_Environment.h:
        * protocols/ace/HTBP/HTBP_Filter_Factory.cpp:
          Simplified the code and fixed several memory leaks.

Mon Oct 26 10:23:13 UTC 2009  Olli Savia  <ops@iki.fi>

        * tests/run_test.lst:
          Don't run MEM_Stream_Test and MT_SOCK_Test on LynxOS.

Mon Oct 26 10:18:28 UTC 2009  Olli Savia  <ops@iki.fi>

        * tests/Bug_2653_Regression_Test.cpp:
        * tests/Cached_Conn_Test.cpp:
        * tests/Reactor_Dispatch_Order_Test.cpp:
          LynxOS improvements.

Mon Oct 26 08:32:08 UTC 2009  Olli Savia  <ops@iki.fi>

        * tests/OS_Test.cpp:
          Improved test to detect if std{out,err} is not associated
          with an output stream. This may happen with Windows application
          without a console window.

Mon Oct 26 07:48:19 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/config-win32-msvc-10.h:
        * ace/config-win32-msvc-8.h:
        * ace/config-win32-msvc-9.h:
          Fix for WinCE build.

Sat Oct 24 14:33:33 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Basic_Types.h:
          Fix for PPC64
